Fix file input button spacing

--- a/app/src/components/forms/common.styl
+++ b/app/src/components/forms/common.styl
@@ -14,6 +14,7 @@
   border: 1px solid $color-muted
   border-radius: $radius-sm
   child-radius-horizontal: $radius-sm
+  spacing-horizontal: 0
 
   button {
     stateful-background: $background-darken
